# PureVLM

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
csrc/: elmwise_ops.cu  torch_bindings.cpp
csrc/flash_attn/: flash_api.cpp  namespace_config.h
csrc/gptq_marlin/: dequant.h  generate_kernels.py  gptq_marlin.cu  gptq_marlin_repack.cu  kernel.h  kernel_bf16_kfe2m1f.cu  kernel_bf16_kfe4m3fn.cu  kernel_bf16_ku4.cu  kernel_bf16_ku4b8.cu  kernel_bf16_ku8b128.cu  kernel_fp16_kfe2m1f.cu  kernel_fp16_kfe4m3fn.cu  kernel_fp16_ku4.cu  kernel_fp16_ku4b8.cu  kernel_fp16_ku8b128.cu  marlin_dtypes.cuh  marlin_template.h
csrc/include/: cub_helpers.h  dispatch_utils.h  ops.h  scalar_type.hpp  vectorization.cuh  vectorization_utils.cuh
examples/: client_test.py  conv3d_test.py  eagle_demo.py  hf-omnivinci-demo.py  hf-qwen-demo.py  offline_demo.py  online_quantization_marlin.json  test_graph.py  time_static.py
examples/stash/: llama-torch.cc  llama.cc  tensor.cpp  tensor.h  tensor_with_dlpack.cc
purevlm/: eagle_engine.py  engine.py  serve.py  utils.py
purevlm/layer/: __init__.py  attention.py  conv.py  embedding.py  norm.py  qlinear.py  rotemb.py
purevlm/layer/gemmw4a16_marlin/: preprocess_for_weight.py
purevlm/layer/quantization/: online_quant_preprocess.py  quant_config.py  quant_gemm_kernel.py  scalar_type.py  utils.py
purevlm/model/: __init__.py  config.py  mm_utils.py  mytokenizer.cc  other_tokenizer.py  qwen2_5_vl.py  qwen3_eagle.py  qwen3_vl.py  qwen3_vl_graph.py  text_model.py  vision_model.py
purevlm/utils/: __init__.py  sample.py
(+3 files in other folders)
